<resources>
    <string name="app_name">Chess Timer</string>
    <string name="time_text">10:00</string>
    <string name="subtitle_text">Tap to start</string>
    <string name="subtitle_resume_text">Tap to resume</string>
    <string name="move_text">0</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="restart_msg">Confirm Reset?</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="apply">Apply</string>
    <string name="themes">Themes</string>
    <string name="settings">Settings</string>
    <string name="audio">Audio</string>
    <string name="game_mode">Game Mode</string>
    <string name="info">Info</string>
    <string name="sound">Sound</string>
    <string name="sound_subtitle">Beep after each move</string>
    <string name="low_warning">Low time warnings</string>
    <string name="vibrate">Vibrate</string>
    <string name="alert_time">Alert time</string>
    <string name="contact_us">Thank you for choosing our app.\n Our team is always happy to help you!</string>
    <string name="contact_us_button">Contact US</string>
    <string name="colon">:</string>
    <string name="set">SET</string>
</resources>