<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FBFBFB"
    tools:context=".Audio">

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/sound_tag"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/sound_text"
                android:text="@string/sound"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:id="@+id/sound_subtitle"
                android:layout_below="@id/sound_text"
                android:text="@string/sound_subtitle"
                android:textColor="@color/second_text_color"
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="RelativeOverlap" />

            <Switch
                android:id="@+id/switch_1"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/line" />

        <RelativeLayout
            android:id="@+id/low_time_tag"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:id="@+id/low_warning_text"
                android:text="@string/low_warning"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="RelativeOverlap" />

            <Switch
                android:id="@+id/switch_2"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/vibrate_tag"
            android:visibility="gone"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:id="@+id/vibrate_text"
                android:text="@string/vibrate"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="RelativeOverlap" />

            <Switch
                android:id="@+id/switch_3"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/alert_time_tag"
            android:layout_marginTop="10dp"
            android:background="@drawable/card_ripple"
            android:paddingTop="5dp"
            android:visibility="gone"
            android:paddingBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/alert_time_text"
                android:text="@string/alert_time"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:id="@+id/alert_time_subtitle"
                android:layout_below="@id/alert_time_text"
                android:text="00:00"
                android:textColor="@color/second_text_color"
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="RelativeOverlap" />

        </RelativeLayout>

    </LinearLayout>

</FrameLayout>