<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/top_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:tint="@color/top_image"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image_background" />

    <ImageView
        android:id="@+id/bottom_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:tint="@color/bottom_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/image_background" />

    <TextView
        android:id="@+id/bottom_image_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/josefin_sans_bold"
        android:text="@string/time_text"
        android:textColor="@color/text_color"
        android:textSize="90sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/bottom_image"
        app:layout_constraintTop_toTopOf="@+id/bottom_image" />

    <TextView
        android:id="@+id/top_image_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/josefin_sans_bold"
        android:rotation="180"
        android:text="@string/time_text"
        android:textColor="@color/text_color"
        android:textSize="90sp"
        app:layout_constraintBottom_toBottomOf="@+id/top_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/top_image"
        app:layout_constraintTop_toTopOf="@+id/top_image" />

    <TextView
        android:id="@+id/bottom_subtitle_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/josefin_sans_bold"
        android:textSize="24sp"
        android:textColor="@color/text_color"
        android:text="@string/subtitle_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottom_image_text" />

    <TextView
        android:id="@+id/top_subtitle_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/josefin_sans_bold"
        android:textSize="24sp"
        android:rotation="180"
        android:textColor="@color/text_color"
        android:text="@string/subtitle_text"
        app:layout_constraintBottom_toTopOf="@+id/top_image_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/bottom_move_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/josefin_sans_bold"
        android:text="@string/move_text"
        android:textColor="@color/text_color"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/top_move_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/josefin_sans_bold"
        android:rotation="180"
        android:text="@string/move_text"
        android:textColor="@color/text_color"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/pauseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:translationY="-40dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bottom_image"
        app:srcCompat="@drawable/ic_pausebutton" />

    <ImageButton
        android:id="@+id/settingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:translationY="-40dp"
        app:layout_constraintEnd_toStartOf="@+id/restartButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bottom_image"
        app:srcCompat="@drawable/ic_settingsbutton" />

    <ImageButton
        android:id="@+id/themesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:translationY="-40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/restartButton"
        app:layout_constraintTop_toTopOf="@+id/bottom_image"
        app:srcCompat="@drawable/ic_themebutton" />

    <ImageButton
        android:id="@+id/restartButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:translationY="-40dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bottom_image"
        app:srcCompat="@drawable/ic_restartbutton" />

</androidx.constraintlayout.widget.ConstraintLayout>